--- a/client/src/scss/current.scss
+++ b/client/src/scss/current.scss
@@ -69,7 +69,7 @@
     @media (max-width: 1024px) and (orientation: portrait)
     {
         width: 80%;
-        height: 80%;
+        height: fit-content;
 
         &__header
         {
